--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "echarts-ng",
   "version": "0.1.5",
   "description": "Simple angularjs wrap for Baidu echarts.",
-  "main": "dist/echarts-ng.js",
+  "main": "index.js",
   "dependencies": {},
   "devDependencies": {
     "bower": "^1.7.9",
